Fix JSI benchmark